--- a/.gitignore
+++ b/.gitignore
@@ -125,11 +125,11 @@ test/ca/foo-ca-crl.pem
 *.csr
 *.old
 acme/*.my
-/acme2certifier_wsgi.py
+/acme2certifier_wsgi.py__
 env.txt
 gna.py
-acme_srv/db_handler.py
-acme_srv/ca_handler.py
+acme_srv/db_handler.py__
+acme_srv/ca_handler.py__
 acme_srv/certifier_ca_handler.py
 acme_srv/acme_srv.cfg
 acme_srv/wsgi_handler.py
